# Unity_NVAPI

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
Runtime/: NvApiSer.cs
src/: Plugin.cpp  Plugin.def  Plugin.h
